Pass BigNumber fields as numeric values in Formula transform (#7180)
Signed-off-by: lance <leehaut@gmail.com>